--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #fcfbfb;
+    background-color: #fcfcfb;
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
