--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -89,7 +89,7 @@ h4{
 .join:hover{
     color: white;
 }.msg {
-    background-color: #0a0421;
+    background-color: #ec911a;
     line-height: 1.5em;
     padding: 35px;
   }
