--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -100,7 +100,7 @@ h4{
 }
 .msg p{
     color: rgb(255, 255, 255);
-    font-size: 1.875em;
+    font-size: 30px;
 }
 .rivers-card{
     margin: 200px 0;  
