--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: lightgrey;
+    background-color: #d0d0d0;
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
